added unique url to each user & on new session check and create user if needed
